hphp/test/slow/object/ctor_fail_abstract2.php.expectf
Fatal error: Cannot instantiate abstract class Asd in %s/slow/object/ctor_fail_abstract2.php on line 14
